# mailinaty

./: Mailinaty.hs  mailinaty.cabal
